# trueformtranslator

./: LICENSE  README.md  analisis de datos y startups_analyse des données et des startups.docx  app.py  estoicismo_en_Inglés.docx  estoicismo_stoïcisme.docx  estoicismo_translated.docx  lorem ipsum ejemplo_lorem ipsum example_4.docx  lorem ipsum example_lorem ipsum example_3.5.docx  pyproject.toml  revision sistematica_systematic review.docx  streamlit_utils.py
.streamlit/: config.toml
backend/: builder.py  chains.py  db.py  extractor.py  models.py  paths.py  translator.py  utils.py  validator.py  xml_validator.py
backend/docx_xml/: [Content_Types].xml
backend/docx_xml/customXml/: itemProps1.xml
backend/docx_xml/docProps/: app.xml  core.xml
backend/docx_xml/word/: document.xml  endnotes.xml  fontTable.xml  footer1.xml  footnotes.xml  header1.xml  numbering.xml  settings.xml  styles.xml  webSettings.xml
backend/docx_xml/word/_rels/: document.xml.rels  header1.xml.rels
