[tool.poetry]
name = "trueformtranslator"
version = "0.1.0"
description = ""
authors = ["sertemo <tejedor.moreno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
langchain = "^0.1.0"
langdetect = "^1.0.9"
pycountry = "^23.12.11"
textblob = "^0.17.1"
python-docx = "^1.1.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
